fix(#11): fix text wrap & change brief file link

--- a/src/components/shared/accordion/accordion-item/accordion-item.module.css
+++ b/src/components/shared/accordion/accordion-item/accordion-item.module.css
@@ -27,7 +27,7 @@
   letter-spacing: var(--letter-spacing-small, -0.04em);
   padding-block: 35px 36px;
   min-width: 75%;
-  max-width: 84%;
+  max-width: 75%;
 }
 
 .accordion_content {
